# src/api/index.js
@@ -1,15 +1,13 @@
 const express = require('express')
 
-const produtosRouter = require("./produtos")
-const fornecedoresRouter = require("./fornecedores")
+const produtosRouter = require('./produtos')
+const fornecedoresRouter = require('./fornecedores')
+const usuariosRouter = require('./usuarios')
 
 const router = express.Router()
 
-router.get('/', (req, res) => {
-    res.send('Deu certo.')
-})
-
 router.use('/produtos', produtosRouter)
 router.use('/fornecedores', fornecedoresRouter)
+router.use('/usuarios', usuariosRouter)
 
 module.exports = router
