# src/swagger_output.json
@@ -17,6 +17,14 @@
     "http",
     "https"
   ],
+  "securityDefinitions": {
+    "apiKeyAuth": {
+      "type": "apiKey",
+      "in": "header",
+      "name": "authorization",
+      "description": "Insira seu token aqui."
+    }
+  },
   "consumes": [
     "application/json"
   ],
@@ -24,14 +32,6 @@
     "application/json"
   ],
   "paths": {
-    "/": {
-      "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      }
-    },
     "/produtos/": {
       "get": {
         "tags": [
@@ -41,7 +41,7 @@
         "parameters": [],
         "responses": {
           "200": {
-            "description": "Lista de produtos encontrada.",
+            "description": "Produto encontrado",
             "schema": {
               "$ref": "#/definitions/Produto"
             }
@@ -49,10 +49,18 @@
           "400": {
             "description": "Houve algum problema na requisição."
           },
+          "401": {
+            "description": "Unauthorized"
+          },
           "404": {
             "description": "Lista não encontrada."
           }
-        }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       },
       "post": {
         "tags": [
@@ -61,7 +69,7 @@
         "description": "Endpoint para criar um novo produto.",
         "parameters": [
           {
-            "name": "NovoProduto",
+            "name": "novoProduto",
             "in": "body",
             "description": "Informações do produto",
             "required": true,
@@ -77,8 +85,16 @@
           },
           "400": {
             "description": "Os campos nome e preço são obrigatórios."
+          },
+          "401": {
+            "description": "Unauthorized"
           }
-        }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
       }
     },
     "/fornecedores/": {
@@ -87,6 +103,77 @@
         "description": "",
         "parameters": [],
         "responses": {}
+      }
+    },
+    "/usuarios/": {
+      "post": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "senha": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/usuarios/auth": {
+      "post": {
+        "tags": [],
+        "description": "",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "senha": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
       }
     }
   },
